[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/actors/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/levels/Main.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/background.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/ground.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/flappyfont.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://assets/textures/message.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 296.656, 26.1004 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 94.7613, 376.014 )

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.25

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="Background" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2( -7.2865, -54.2915 )
collision_layer = 2

[node name="Sprite" type="Sprite" parent="Ground"]
position = Vector2( 253.937, 776.63 )
z_index = 10
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 248.962, 717.526 )
shape = SubResource( 1 )

[node name="Ground" type="Area2D" parent="Ground"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/Ground"]
position = Vector2( 248.544, 713.524 )
shape = SubResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 212.262
margin_top = 50.7239
margin_right = 252.262
margin_bottom = 64.7239
custom_fonts/font = SubResource( 2 )
text = "0
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartScreen" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 93.8255
margin_top = 152.778
margin_right = 369.826
margin_bottom = 552.778
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="passed_pipe" from="Player" to="." method="_on_Player_passed_pipe"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_PipeTimer_timeout"]
[connection signal="body_entered" from="Ground/Ground" to="Player" method="_on_Ground_body_entered"]
